# borealis

./: .gitignore
android-project/app/jni/: CMakeLists.txt
demo/include/tab/: settings_tab.hpp
demo/src/tab/: settings_tab.cpp
resources/xml/tabs/: settings.xml
